# HexFrameFlow

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp  main_singularityviewer.cpp
app/FrameFieldGeneration/: CMakeLists.txt  main.cpp
app/IntegerGrid/: CMakeLists.txt  main.cpp  main_integergrid.cpp
app/IsolineViewer/: CMakeLists.txt  ExtractIsolines.cpp  ExtractIsolines.h  main.cpp
app/Seamless/: CMakeLists.txt  main_seamless.cpp
app/SingularityViewer/: CMakeLists.txt  FrameFieldVis.cpp  FrameFieldVis.h  ReadFancyData.cpp  ReadFancyData.h  main.cpp  main_singularityviewer.cpp
app/VolumeParamViewer/: CMakeLists.txt  ExtractIsolines.cpp  ExtractIsolines.h  main.cpp  main_volumeparamviewer.cpp
app/libHexEx/: CMakeLists.txt  main.cpp
app/libHexEx_cmdline_tool/: CMakeLists.txt  main.cpp
cmake/: Dependencies.cmake  FindGurobi.cmake  FindOpenVolumeMesh.cmake  FindPolyscope.cmake  add_lib.cmake
data/: cube.tet  fandisk.mesh  join.tet  tetrahedron_100.fra  tetrahedron_100.mesh  tetrahedron_100_c_0.hexex  tetrahedron_100_c_0_2.hexex  tetrahedron_100_c_0_5.hexex  tetrahedron_100_c_1.hexex  tetrahedron_100_f.hexex  tetrahedron_100_s.hexex
data/hex_test_data/cube_hole_meshes/: cube_hole_field.fra  cube_hole_field.hexex  cube_hole_pra.fra  cube_hole_pra.hexex  cube_hole_tet.mesh
data/hex_test_data/cube_meshes/: cube.fra  cube.hexex  cube.mesh
data/hex_test_data/cylinder_meshes/: cylinder.fra  cylinder.hexex  cylinder.mesh  cylinder_field.fra  cylinder_modified.fra  cylinder_modified.hexex  cylinder_pra.fra  cylinder_pra.hexex
data/hex_test_data/fandisk_meshes/: fandisk.fra  fandisk.mesh  fandisk_field.fra  fandisk_pra.fra  fandisk_pra.hexex
data/hex_test_data/notches_meshes/: notches.tet  notches_field.fra  notches_field.hexex  notches_pra.fra  notches_pra.hexex  notches_tet.mesh
data/hex_test_data/rotated_cube_meshes/: rotated_cube.fra  rotated_cube.hexex  rotated_cube.mesh
data/hex_test_data/shell_meshes/: shell.hexex  shell_field.fra  shell_pra.fra  shell_pra.hexex  shell_tet.mesh
data/hex_test_data/tet_meshes/: tet.fra  tet.hexex  tet.mesh  tet_100.fra  tet_100.mesh  tet_100.tet  tet_100_field.fra  tet_100_field.hexex  tet_100_pre.hexex  tet_pra.fra  tet_pra.hexex
data/hex_test_data/torus_meshes/: torus.mesh  torus_field.fra  torus_fra.fra
src/: CMakeLists.txt
src/CubeCover/: AssignmentGroup.cpp  AssignmentGroup.h  CMakeLists.txt  CoMISoMIPWrapper.cpp  CubeCover.cpp  CurlCorrection.cpp  CurlCorrection.h  FrameField.cpp  FrameField.h  GurobiMIPWrapper.cpp  Integration.cpp  Integration.h  MIPWrapper.h  MeshSubdivide.h  ReadFrameField.cpp  ReadFrameField.h  SingularCurveNetwork.cpp  SingularCurveNetwork.h  StreamlinesExtraction.cpp  StreamlinesExtraction.h  SurfaceExtraction.cpp  TetMeshDualLaplace.cpp  WriteFrameFIeld.cpp  WriteHexEx.cpp  WriteHexEx.h  readMeshFixed.h
src/Practical3DFrameFieldGeneration/: CMakeLists.txt  FF.cpp  FF.h  ReadMe.txt
src/core/: CMakeLists.txt  CoMISoMIPWrapper.cpp  CubeCover.cpp  CubeCover.h  CurlCorrection.h  CutToSimplyConnected.cpp  CutToSimplyConnected.h  FrameField.cpp  FrameField.h  IsolinesExtraction.cpp  IsolinesExtraction.h  MeshSubdivide.cpp  ReadFrameField.cpp  ReadFrameField.h  ReadHexEx.cpp  ReadHexEx.h  ReadMoments.cpp  ReadMoments.h  ReadVTK.h  SingularCurveNetwork.cpp  SingularCurveNetwork.h  StreamlinesExtraction.h  SurfaceExtraction.h  TetMeshConnectivity.cpp  TetMeshConnectivity.h  TetMeshDualLaplace.h  WriteFrameField.h  WriteHexEx.cpp  readMesh.h  readMeshFixed.h
src/libHexEx/: CMakeLists.txt  HexEx.cc  HexExtractor.cc  LICENSE  Typedefs.hh
src/utils/: log.h  parse_filepath.h
